force-app/main/default/objects/PriceListLine__c/fields/HPrice__c.field-meta.xml
<CustomField>
    <fullName>HPrice__c</fullName>
    <label>תעריף חג</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>