force-app/main/default/objects/PriceListLine__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>TIMEVALUE(&apos;00:00:00.000&apos;)</defaultValue>
    <label>שעת התחלה</label>
    <required>true</required>
    <type>Time</type>
</CustomField>