force-app/main/default/objects/PriceListLine__c/fields/StartText__c.field-meta.xml
<CustomField>
    <fullName>StartText__c</fullName>
    <label>שעת התחלה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>