force-app/main/default/objects/PriceListLine__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>סוג</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abroad</fullName>
                <isActive>false</isActive>
                <label>Abroad</label>
            </value>
            <value>
                <fullName>Course</fullName>
                <isActive>false</isActive>
                <label>Course</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>Introduction</fullName>
                <isActive>false</isActive>
                <label>Introduction</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Renting</fullName>
                <isActive>false</isActive>
                <label>Renting</label>
            </value>
            <value>
                <fullName>Certification</fullName>
                <label>הסמכה</label>
            </value>
            <value>
                <fullName>Friends</fullName>
                <label>חברים</label>
            </value>
            <value>
                <fullName>Enriching</fullName>
                <label>מודרכת</label>
            </value>
            <value>
                <fullName>Club</fullName>
                <default>true</default>
                <label>מועדון</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <label>ריענון</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>